# rtxe

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  main.rs  model.rs  output_formatter.rs
src/chain/: mod.rs
src/chain/evm/: abi_registry.rs  mod.rs  token_resolver.rs
src/chain/evm/abis/: erc1155.json  erc20.json  erc721.json  uniswap_v2_pair.json  uniswap_v2_router.json  uniswap_v3_pool.json  uniswap_v3_router.json  weth.json
src/chain/solana/: instruction_decoder.rs  mod.rs  token_resolver.rs
