[package]
name = "rtxe"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1", features = ["contract", "provider-http", "provider-debug-api", "rpc-types", "rpc-types-trace", "json-abi", "dyn-abi", "sol-types"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
